--- a/janus-frontend/src/assets/i18n/es.json
+++ b/janus-frontend/src/assets/i18n/es.json
@@ -78,7 +78,9 @@
     "BL_NUMBER_REQUIRED": "El número de BL es obligatorio",
     "BL_ORIGINAL_REQUIRED": "Por favor seleccione si el BL original está disponible",
     "SELECT_BL_ORIGINAL": "Seleccionar...",
-    "IMMUTABLE": "Esta operación no puede ser modificada (cerrada/cancelada)"
+    "IMMUTABLE": "Esta operación no puede ser modificada (cerrada/cancelada)",
+    "INSPECTION_TYPE": "Tipo de Inspección",
+    "INCOTERM": "Incoterm"
   },
   "DOCUMENTS": {
     "TITLE": "Documentos",
@@ -136,7 +138,8 @@
     "COMMENTS": "Comentarios",
     "DECLARATIONS": "Declaraciones",
     "HISTORY": "Historial",
-    "AUDIT": "Auditoría"
+    "AUDIT": "Auditoría",
+    "INSPECTION": "Inspección"
   },
   "STATUS": {
     "DRAFT": "Borrador",
@@ -337,7 +340,14 @@
     "TOTAL_VALUE": "Valor Total",
     "TAX_RATE": "Tasa Impositiva (%)",
     "TAX_AMOUNT": "Monto de Impuesto",
-    "NO_TARIFF_LINES": "Sin líneas arancelarias"
+    "NO_TARIFF_LINES": "Sin líneas arancelarias",
+    "REGISTER_DUA": "Registrar DUA",
+    "DUA_NUMBER": "Número de DUA",
+    "SUBMIT_TO_DGA": "Enviar a DGA",
+    "SUBMITTED_TO_DGA_AT": "Enviado a DGA",
+    "DGA_SUBMISSION_CONFIRM": "¿Está seguro de que desea enviar esta declaración a la DGA?",
+    "DUA_REGISTERED": "Número de DUA registrado exitosamente",
+    "DGA_SUBMITTED": "Declaración enviada a la DGA exitosamente"
   },
   "CROSSING": {
     "TITLE": "Cruce Aduanero",
@@ -400,7 +410,48 @@
     "MISSING_DOC_CERTIFICATE": "Documento obligatorio faltante: Certificado",
     "PHYSICAL_ALL_DOCS_VALIDATED": "Todos los documentos deben estar VALIDADOS antes de la Revisión de Valoración para inspección Física",
     "HIGH_VALUE_CERT_REQUIRED": "Las operaciones marítimas requieren un documento de Certificado",
-    "INVOICE_NOT_VALIDATED": "La Factura Comercial debe estar VALIDADA antes de la Declaración en Proceso"
+    "INVOICE_NOT_VALIDATED": "La Factura Comercial debe estar VALIDADA antes de la Declaración en Proceso",
+    "INSPECTION_TYPE_REQUIRED": "El tipo de inspección debe ser establecido antes de avanzar a Revisión de Valoración"
+  },
+  "INSPECTION": {
+    "TYPE_LABEL": "Tipo de Inspección",
+    "TYPE_EXPRESO": "Expreso",
+    "TYPE_VISUAL": "Visual",
+    "TYPE_FISICA": "Física",
+    "CONFIRM_TYPE": "¿Está seguro de que desea establecer este tipo de inspección?",
+    "EXPRESO_NOTE": "Inspección expresa — la operación avanzará automáticamente después de la revisión aduanera",
+    "PHOTOS_TITLE": "Fotos de Inspección",
+    "NO_PHOTOS": "Aún no se han subido fotos de inspección",
+    "UPLOAD_PHOTO": "Subir Foto",
+    "PHOTO_CAPTION": "Leyenda (opcional)",
+    "UPLOAD_SUCCESS": "Foto subida exitosamente",
+    "SET_TYPE_SUCCESS": "Tipo de inspección establecido exitosamente",
+    "PHOTO_UPLOAD_LABEL": "Seleccionar foto para subir",
+    "EXPENSES_TITLE": "Gastos de Inspección",
+    "NO_EXPENSES": "Aún no se han registrado gastos de inspección",
+    "ADD_EXPENSE": "Agregar Gasto",
+    "EDIT_EXPENSE": "Editar",
+    "DELETE_EXPENSE": "Eliminar",
+    "EXPENSE_CATEGORY": "Categoría",
+    "EXPENSE_DESCRIPTION": "Descripción",
+    "EXPENSE_AMOUNT": "Monto",
+    "EXPENSE_CURRENCY": "Moneda",
+    "EXPENSE_DATE": "Fecha",
+    "EXPENSE_JUSTIFICATION": "Justificación",
+    "EXPENSE_REGISTERED_BY": "Registrado Por",
+    "EXPENSE_TOTAL": "Total",
+    "EXPENSE_SAVE": "Guardar",
+    "EXPENSE_CANCEL": "Cancelar",
+    "EXPENSE_ADDED": "Gasto agregado exitosamente",
+    "EXPENSE_UPDATED": "Gasto actualizado exitosamente",
+    "EXPENSE_DELETED": "Gasto eliminado exitosamente",
+    "CONFIRM_DELETE_EXPENSE": "¿Está seguro de que desea eliminar este gasto?",
+    "CATEGORY_LABOR": "Mano de Obra",
+    "CATEGORY_EQUIPMENT": "Equipo",
+    "CATEGORY_TRANSPORT": "Transporte",
+    "CATEGORY_SECURITY": "Seguridad",
+    "CATEGORY_OVERTIME": "Sobretiempo",
+    "CATEGORY_OTHER": "Otro"
   },
   "LANG": {
     "ES": "Español",
